routing: keep stop validation failures deterministic